crates/pyxray-render/tests/snapshots/snapshots__blueprint-card-ansi.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: ansi
---
[0;38;2;29;52;72;48;2;10;20;32m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;89;210;255;48;2;10;20;32;1mpyxray[0;38;2;76;106;134;48;2;10;20;32m  [0;38;2;220;233;245;48;2;10;20;32;1msketchy.py[0;38;2;220;233;245;48;2;10;20;32m                             [0;38;2;76;106;134;48;2;10;20;32m21 lines · 16 statements · depth 2 · cyclomatic 2[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;220;233;245;48;2;10;20;32;1mreads the environment → makes 2 network calls → DELETES /tmp/stage → evaluates code at runtime …[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32mrisk [0;38;2;255;107;107;48;2;10;20;32m██████████████████  100  read it first[0;38;2;220;233;245;48;2;10;20;32m                                    [0;38;2;29;52;72;48;2;10;20;32m·[0;38;2;255;180;84;48;2;10;20;32;1m▸[0;38;2;255;107;107;48;2;10;20;32;1m×[0;38;2;76;106;134;48;2;10;20;32m [0;38;2;185;140;255;48;2;10;20;32;1m≈[0;38;2;255;143;90;48;2;10;20;32;1m»[0;38;2;255;212;121;48;2;10;20;32;1m§[0;38;2;76;106;134;48;2;10;20;32m [0;38;2;255;121;198;48;2;10;20;32;1m‡[0;38;2;76;106;134;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m····[0;38;2;76;106;134;48;2;10;20;32m [0;38;2;127;191;165;48;2;10;20;32;1m¶[0;38;2;29;52;72;48;2;10;20;32m·[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
[0;38;2;220;233;245;48;2;10;20;32m                                                                                                    [0m
[0;38;2;29;52;72;48;2;10;20;32m┌─ [0;38;2;89;210;255;48;2;10;20;32;1mC A P A B I L I T I E S[0;38;2;29;52;72;48;2;10;20;32m ────────────────────────────────────────────────────────────────────────┐[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;10;20;32;48;2;185;140;255;1m ≈ net 2! [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;10;20;32;48;2;255;212;121;1m § env 2! [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;10;20;32;48;2;255;143;90;1m » shell 2! [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;10;20;32;48;2;255;107;107;1m × delete 1! [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;10;20;32;48;2;255;121;198;1m ‡ eval 1! [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;255;180;84;48;2;10;20;32m ▸ write 3 [0;38;2;220;233;245;48;2;10;20;32m [0;38;2;127;191;165;48;2;10;20;32m ¶ print 1 [0;38;2;220;233;245;48;2;10;20;32m             [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
[0;38;2;220;233;245;48;2;10;20;32m                                                                                                    [0m
[0;38;2;29;52;72;48;2;10;20;32m┌─ [0;38;2;89;210;255;48;2;10;20;32;1mT E X T U R E[0;38;2;29;52;72;48;2;10;20;32m ──────────────────────────────────────────────────────────────────────────────────┐[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;138;166;191;48;2;10;20;32m▂▂▂▂▂▂▂▂▂▂[0;38;2;29;52;72;48;2;10;20;32m···[0;38;2;255;212;121;48;2;10;20;32m▂▂▂▂▂▂[0;38;2;138;166;191;48;2;10;20;32m▂▂▂▂[0;38;2;29;52;72;48;2;10;20;32m····[0;38;2;255;107;107;48;2;10;20;32m▂▂▂▂▂[0;38;2;255;180;84;48;2;10;20;32m▂▂▂▂▂[0;38;2;29;52;72;48;2;10;20;32m····[0;38;2;185;140;255;48;2;10;20;32m▂▂▂▂▂[0;38;2;138;166;191;48;2;10;20;32m▂▂▂▂[0;38;2;255;121;198;48;2;10;20;32m▂▂▂▂▂[0;38;2;29;52;72;48;2;10;20;32m····[0;38;2;138;166;191;48;2;10;20;32m▂▂▂▂▂[0;38;2;255;180;84;48;2;10;20;32m▄▄▄▄██████[0;38;2;255;143;90;48;2;10;20;32m▄▄▄▄[0;38;2;29;52;72;48;2;10;20;32m····[0;38;2;185;140;255;48;2;10;20;32m▂▂▂▂▂[0;38;2;255;143;90;48;2;10;20;32m▂▂▂▂▂[0;38;2;127;191;165;48;2;10;20;32m▂▂▂▂[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m             [0;38;2;255;107;107;48;2;10;20;32;1m!!!!!![0;38;2;76;106;134;48;2;10;20;32m        [0;38;2;255;107;107;48;2;10;20;32;1m!!!!![0;38;2;255;180;84;48;2;10;20;32m▸▸▸▸▸[0;38;2;76;106;134;48;2;10;20;32m    [0;38;2;255;107;107;48;2;10;20;32;1m!!!!![0;38;2;76;106;134;48;2;10;20;32m    [0;38;2;255;107;107;48;2;10;20;32;1m!!!!![0;38;2;76;106;134;48;2;10;20;32m         [0;38;2;255;180;84;48;2;10;20;32m▸▸▸▸▸▸▸▸▸[0;38;2;255;107;107;48;2;10;20;32;1m!!!!![0;38;2;76;106;134;48;2;10;20;32m    [0;38;2;255;107;107;48;2;10;20;32;1m!!!!!!!!!![0;38;2;127;191;165;48;2;10;20;32m¶¶¶¶[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
[0;38;2;220;233;245;48;2;10;20;32m                                                                                                    [0m
[0;38;2;29;52;72;48;2;10;20;32m┌─ [0;38;2;89;210;255;48;2;10;20;32;1mW H A T   I T   D O E S[0;38;2;29;52;72;48;2;10;20;32m ────────────────────────────────────────────────────────────────────────┐[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m   4 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;255;212;121;48;2;10;20;32m§ getenv   [0;38;2;220;233;245;48;2;10;20;32mAPI_TOKEN                                [0;38;2;255;107;107;48;2;10;20;32m! reads a secret from the environment[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m   7 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;255;107;107;48;2;10;20;32m× rmtree   [0;38;2;220;233;245;48;2;10;20;32m/tmp/stage                    [0;38;2;255;107;107;48;2;10;20;32m! recursively deletes a directory; ignore_error…[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m   8 [0;38;2;138;166;191;48;2;10;20;32m  [0;38;2;255;180;84;48;2;10;20;32m▸ mkdir    [0;38;2;220;233;245;48;2;10;20;32m/tmp/stage                                                                     [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  10 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;185;140;255;48;2;10;20;32m≈ GET      [0;38;2;220;233;245;48;2;10;20;32mhttps://example.invalid/paylo…[0;38;2;255;107;107;48;2;10;20;32m! verify=False — TLS certificates are not check…[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  12 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;255;121;198;48;2;10;20;32m‡ unpickle [0;38;2;220;233;245;48;2;10;20;32mpickle.loads                                  [0;38;2;255;107;107;48;2;10;20;32m! unpickling runs arbitrary code[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  15 [0;38;2;255;199;90;48;2;10;20;32m· [0;38;2;255;180;84;48;2;10;20;32m▸ truncate [0;38;2;220;233;245;48;2;10;20;32mf"{STAGING}/{name}.sh"                                                         [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  16 [0;38;2;255;199;90;48;2;10;20;32m· [0;38;2;255;180;84;48;2;10;20;32m▸ write    [0;38;2;220;233;245;48;2;10;20;32mopen(f"{STAGING}/{name}.sh", "w")                                              [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  17 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;255;143;90;48;2;10;20;32m» run      [0;38;2;220;233;245;48;2;10;20;32mf"bash {STAGING}/{name}.sh"   [0;38;2;255;107;107;48;2;10;20;32m! runs an external command; shell=True — the ar…[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  19 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;185;140;255;48;2;10;20;32m≈ POST     [0;38;2;220;233;245;48;2;10;20;32mhttps://example.invalid/report                   [0;38;2;255;107;107;48;2;10;20;32m! sends data to a remote host[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  19 [0;38;2;138;166;191;48;2;10;20;32m  [0;38;2;255;212;121;48;2;10;20;32m§ probe    [0;38;2;220;233;245;48;2;10;20;32mos.uname                                                                       [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  20 [0;38;2;255;107;107;48;2;10;20;32;1m! [0;38;2;255;143;90;48;2;10;20;32m» run      [0;38;2;220;233;245;48;2;10;20;32m["rm", "-rf", STAGING]            [0;38;2;255;107;107;48;2;10;20;32m! runs an external command; recursive delete[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m│[0;38;2;220;233;245;48;2;10;20;32m [0;38;2;76;106;134;48;2;10;20;32m  21 [0;38;2;138;166;191;48;2;10;20;32m  [0;38;2;127;191;165;48;2;10;20;32m¶ print    [0;38;2;220;233;245;48;2;10;20;32mdone                                                                           [0;38;2;29;52;72;48;2;10;20;32m│[0m
[0;38;2;29;52;72;48;2;10;20;32m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
