crates/pyxray-render/tests/snapshots/snapshots__blueprint-card-html.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: "export::to_html(&buf, &theme, \"sketchy.py\")"
---
<!doctype html>
<html><head><meta charset="utf-8">
<title>sketchy.py</title>
<style>
  body { margin:0; padding:24px; background:#0a1420; }
pre.pyxray { font: 13px/1.32 "JetBrains Mono","Fira Code","SF Mono","DejaVu Sans Mono",ui-monospace,monospace; margin:0; padding:16px; border-radius:6px; white-space:pre; overflow-x:auto; }
</style>
</head>
<body>
<pre class="pyxray" style="background:#0a1420;color:#dce9f5"><span style="color:#1d3448;background:#0a1420;">┌──────────────────────────────────────────────────────────────────────────────────────────────────┐</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#59d2ff;background:#0a1420;font-weight:700;">pyxray</span><span style="color:#4c6a86;background:#0a1420;">  </span><span style="color:#dce9f5;background:#0a1420;font-weight:700;">sketchy.py</span><span style="color:#dce9f5;background:#0a1420;">                             </span><span style="color:#4c6a86;background:#0a1420;">21 lines · 16 statements · depth 2 · cyclomatic 2</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#dce9f5;background:#0a1420;font-weight:700;">reads the environment → makes 2 network calls → DELETES /tmp/stage → evaluates code at runtime …</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">risk </span><span style="color:#ff6b6b;background:#0a1420;">██████████████████  100  read it first</span><span style="color:#dce9f5;background:#0a1420;">                                    </span><span style="color:#1d3448;background:#0a1420;">·</span><span style="color:#ffb454;background:#0a1420;font-weight:700;">▸</span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">×</span><span style="color:#4c6a86;background:#0a1420;"> </span><span style="color:#b98cff;background:#0a1420;font-weight:700;">≈</span><span style="color:#ff8f5a;background:#0a1420;font-weight:700;">»</span><span style="color:#ffd479;background:#0a1420;font-weight:700;">§</span><span style="color:#4c6a86;background:#0a1420;"> </span><span style="color:#ff79c6;background:#0a1420;font-weight:700;">‡</span><span style="color:#4c6a86;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">····</span><span style="color:#4c6a86;background:#0a1420;"> </span><span style="color:#7fbfa5;background:#0a1420;font-weight:700;">¶</span><span style="color:#1d3448;background:#0a1420;">·</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">└──────────────────────────────────────────────────────────────────────────────────────────────────┘</span>
<span style="color:#dce9f5;background:#0a1420;">                                                                                                    </span>
<span style="color:#1d3448;background:#0a1420;">┌─ </span><span style="color:#59d2ff;background:#0a1420;font-weight:700;">C A P A B I L I T I E S</span><span style="color:#1d3448;background:#0a1420;"> ────────────────────────────────────────────────────────────────────────┐</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#0a1420;background:#b98cff;font-weight:700;"> ≈ net 2! </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#0a1420;background:#ffd479;font-weight:700;"> § env 2! </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#0a1420;background:#ff8f5a;font-weight:700;"> » shell 2! </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#0a1420;background:#ff6b6b;font-weight:700;"> × delete 1! </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#0a1420;background:#ff79c6;font-weight:700;"> ‡ eval 1! </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#ffb454;background:#0a1420;"> ▸ write 3 </span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#7fbfa5;background:#0a1420;"> ¶ print 1 </span><span style="color:#dce9f5;background:#0a1420;">             </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">└──────────────────────────────────────────────────────────────────────────────────────────────────┘</span>
<span style="color:#dce9f5;background:#0a1420;">                                                                                                    </span>
<span style="color:#1d3448;background:#0a1420;">┌─ </span><span style="color:#59d2ff;background:#0a1420;font-weight:700;">T E X T U R E</span><span style="color:#1d3448;background:#0a1420;"> ──────────────────────────────────────────────────────────────────────────────────┐</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#8aa6bf;background:#0a1420;">▂▂▂▂▂▂▂▂▂▂</span><span style="color:#1d3448;background:#0a1420;">···</span><span style="color:#ffd479;background:#0a1420;">▂▂▂▂▂▂</span><span style="color:#8aa6bf;background:#0a1420;">▂▂▂▂</span><span style="color:#1d3448;background:#0a1420;">····</span><span style="color:#ff6b6b;background:#0a1420;">▂▂▂▂▂</span><span style="color:#ffb454;background:#0a1420;">▂▂▂▂▂</span><span style="color:#1d3448;background:#0a1420;">····</span><span style="color:#b98cff;background:#0a1420;">▂▂▂▂▂</span><span style="color:#8aa6bf;background:#0a1420;">▂▂▂▂</span><span style="color:#ff79c6;background:#0a1420;">▂▂▂▂▂</span><span style="color:#1d3448;background:#0a1420;">····</span><span style="color:#8aa6bf;background:#0a1420;">▂▂▂▂▂</span><span style="color:#ffb454;background:#0a1420;">▄▄▄▄██████</span><span style="color:#ff8f5a;background:#0a1420;">▄▄▄▄</span><span style="color:#1d3448;background:#0a1420;">····</span><span style="color:#b98cff;background:#0a1420;">▂▂▂▂▂</span><span style="color:#ff8f5a;background:#0a1420;">▂▂▂▂▂</span><span style="color:#7fbfa5;background:#0a1420;">▂▂▂▂</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">             </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!!</span><span style="color:#4c6a86;background:#0a1420;">        </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!</span><span style="color:#ffb454;background:#0a1420;">▸▸▸▸▸</span><span style="color:#4c6a86;background:#0a1420;">    </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!</span><span style="color:#4c6a86;background:#0a1420;">    </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!</span><span style="color:#4c6a86;background:#0a1420;">         </span><span style="color:#ffb454;background:#0a1420;">▸▸▸▸▸▸▸▸▸</span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!</span><span style="color:#4c6a86;background:#0a1420;">    </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">!!!!!!!!!!</span><span style="color:#7fbfa5;background:#0a1420;">¶¶¶¶</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">└──────────────────────────────────────────────────────────────────────────────────────────────────┘</span>
<span style="color:#dce9f5;background:#0a1420;">                                                                                                    </span>
<span style="color:#1d3448;background:#0a1420;">┌─ </span><span style="color:#59d2ff;background:#0a1420;font-weight:700;">W H A T   I T   D O E S</span><span style="color:#1d3448;background:#0a1420;"> ────────────────────────────────────────────────────────────────────────┐</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">   4 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#ffd479;background:#0a1420;">§ getenv   </span><span style="color:#dce9f5;background:#0a1420;">API_TOKEN                                </span><span style="color:#ff6b6b;background:#0a1420;">! reads a secret from the environment</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">   7 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#ff6b6b;background:#0a1420;">× rmtree   </span><span style="color:#dce9f5;background:#0a1420;">/tmp/stage                    </span><span style="color:#ff6b6b;background:#0a1420;">! recursively deletes a directory; ignore_error…</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">   8 </span><span style="color:#8aa6bf;background:#0a1420;">  </span><span style="color:#ffb454;background:#0a1420;">▸ mkdir    </span><span style="color:#dce9f5;background:#0a1420;">/tmp/stage                                                                     </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  10 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#b98cff;background:#0a1420;">≈ GET      </span><span style="color:#dce9f5;background:#0a1420;">https://example.invalid/paylo…</span><span style="color:#ff6b6b;background:#0a1420;">! verify=False — TLS certificates are not check…</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  12 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#ff79c6;background:#0a1420;">‡ unpickle </span><span style="color:#dce9f5;background:#0a1420;">pickle.loads                                  </span><span style="color:#ff6b6b;background:#0a1420;">! unpickling runs arbitrary code</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  15 </span><span style="color:#ffc75a;background:#0a1420;">· </span><span style="color:#ffb454;background:#0a1420;">▸ truncate </span><span style="color:#dce9f5;background:#0a1420;">f"{STAGING}/{name}.sh"                                                         </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  16 </span><span style="color:#ffc75a;background:#0a1420;">· </span><span style="color:#ffb454;background:#0a1420;">▸ write    </span><span style="color:#dce9f5;background:#0a1420;">open(f"{STAGING}/{name}.sh", "w")                                              </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  17 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#ff8f5a;background:#0a1420;">» run      </span><span style="color:#dce9f5;background:#0a1420;">f"bash {STAGING}/{name}.sh"   </span><span style="color:#ff6b6b;background:#0a1420;">! runs an external command; shell=True — the ar…</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  19 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#b98cff;background:#0a1420;">≈ POST     </span><span style="color:#dce9f5;background:#0a1420;">https://example.invalid/report                   </span><span style="color:#ff6b6b;background:#0a1420;">! sends data to a remote host</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  19 </span><span style="color:#8aa6bf;background:#0a1420;">  </span><span style="color:#ffd479;background:#0a1420;">§ probe    </span><span style="color:#dce9f5;background:#0a1420;">os.uname                                                                       </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  20 </span><span style="color:#ff6b6b;background:#0a1420;font-weight:700;">! </span><span style="color:#ff8f5a;background:#0a1420;">» run      </span><span style="color:#dce9f5;background:#0a1420;">["rm", "-rf", STAGING]            </span><span style="color:#ff6b6b;background:#0a1420;">! runs an external command; recursive delete</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">│</span><span style="color:#dce9f5;background:#0a1420;"> </span><span style="color:#4c6a86;background:#0a1420;">  21 </span><span style="color:#8aa6bf;background:#0a1420;">  </span><span style="color:#7fbfa5;background:#0a1420;">¶ print    </span><span style="color:#dce9f5;background:#0a1420;">done                                                                           </span><span style="color:#1d3448;background:#0a1420;">│</span>
<span style="color:#1d3448;background:#0a1420;">└──────────────────────────────────────────────────────────────────────────────────────────────────┘</span>
</pre>
</body></html>
